# lpa-input

./: CITATION.cff  MANIFEST.in  README.md  setup.cfg
src/lpa/input/: __init__.py  analyze.py  boundaries.py  data.py  geometries.py  maps.py  models.py  notation.py  overlap.py  parallel.py  sets.py
tests/: analyze.py  boundaries.py  data.py  maps.py  models.py  notation.py  overlap.py  parallel.job  parallel.py  sets.py  test_analyze.py  test_boundaries.py  test_data.py  test_maps.py  test_models.py  test_notation.py  test_overlap.py  test_parallel.job  test_parallel.py  test_sets.py
tests/data/: 1e15m-2_circle_0050nm_RDD_d1e-3_screw_IDBC.txt  rho1e15m-2_circle_0050nm_RDD_d1e-3nm-2_r0_screw_IDBC.txt  rho51725e9m-2_circle_0400nm_RDD_d5e-5nm-2_screw_S0.txt  rho5e13m-2_circle_0400nm_RDD_d5e-5nm-2_screw_S0.txt
