[metadata]
name = lpa-input
version = attr: lpa.input.__version__
author = Dunstan Becht
author_email = dunstan@becht.network
description = Tools for the generation and analysis of dislocation distributions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DunstanBecht/lpa-input
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src
