[metadata]
name = lpa-input
version = attr: lpa.input.__version__
author = Dunstan Becht
author_email = dunstan@becht.network
description = Tools for the generation and analysis of dislocation distributions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DunstanBecht/lpa-input
project_urls =
    Bug Tracker = https://github.com/DunstanBecht/lpa-input/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
    Topic :: System :: Clustering

[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    numpy==1.21.1
    matplotlib==3.4.2
    beartype==0.7.1

[options.packages.find]
where = src
